# symbiote-mcp

./: .dockerignore  .env.example  .gitignore  .gitmodules  CLAUDE.md  Dockerfile  README.md  ai_agent_learning_protocol.md  pyproject.toml  requirements.txt  venom_constitution.md  venom_personality.md  venom_personality_v2.md  venom_spec.md
.github/workflows/: deploy-azure.yml
.specify/memory/: constitution.md
docs/learning/: 00-overview.md  01-mcp-server-decisions.md  01-mcp-server-design.md  01-mcp-server-implementation.md  02-embeddings-decisions.md  02-embeddings-design.md  02-embeddings-implementation.md  03-chromadb-decisions.md  03-chromadb-design.md  03-chromadb-implementation.md  04-mcp-prompts-decisions.md  04-mcp-prompts-design.md  04-mcp-prompts-implementation.md  05-docker-decisions.md  05-docker-design.md  05-docker-implementation.md  99-glossary.md
specs/001-venom-mcp-server/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-venom-mcp-server/contracts/: mcp-schema.json
src/: __init__.py  config.py  server.py
src/memory/: __init__.py  embeddings.py  store.py
src/personalities/: __init__.py  venom_personality.md  venom_personality_v2.md
src/prompts/: __init__.py  venom.py
