[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "symbiote-mcp"
version = "1.0.0"
description = "Cross-platform AI consciousness through persistent semantic memory"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
dependencies = [
    "mcp>=1.0.0",
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "sentence-transformers>=2.3.0",
    "chromadb>=0.4.22",
    "python-dotenv>=1.0.0",
    "pydantic>=2.5.0",
]

[project.scripts]
symbiote-mcp = "src.server:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.setuptools.package-data]
"src.personalities" = ["*.md"]
